bug fixes overflow

--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@
     margin : 0;
     padding : 0;
     font-family: "Poppins", "sans-serif";
+    box-sizing: border-box;
 
 }
 .flexCenter {
@@ -55,4 +56,14 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+  }
+  .orangeText {
+    color: orange;
+    font-size: 1.5rem;
+    font-weight: 600;
+  }
+  .primaryText {
+    color: #1f3e72;
+    font-weight: bold;
+    font-size: 2rem;
   }
